[package]
name = "json_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
futures = "0.3"
pipe = "0.4"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default_features = false, features = ["macros"] }
